<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:columnCount="2"
    android:layout_row="10"
    tools:context=".AddRecord"
    android:orientation="vertical">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:textColor="#000000"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/newName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:textColor="#000000"
        android:text="@string/Amount"/>
    <EditText
        android:id="@+id/newAmount"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:numeric="integer"
        android:maxLength="8"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:textColor="#000000"
        android:text="@string/Desc"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/newDesc"
        android:maxLength="50"
        android:layout_row="3"
        android:layout_column="1" />
    <RadioGroup android:id="@+id/new_type_radio"
        android:layout_row="4"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toPay"
            android:id="@+id/newToPay"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toTake"
            android:id="@+id/newToTake"
            />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="DATE : "
        android:id="@+id/dateButton"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
         />
    <ImageView
        android:id="@+id/paidOrNot"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/ic_action_name_cross"
        android:layout_row="6"
        android:layout_gravity="center"
        android:layout_columnSpan="2"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"

        android:id="@+id/hisaabClear"
        android:layout_row="7"
        android:onClick="onClickHisaabClear"
        android:layout_column="0"
        android:layout_columnSpan="2"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/updateRecord"
        android:id="@+id/button1"
        android:layout_row="8"
        android:onClick="onClickUpdateRec"
        android:layout_column="0"
        android:layout_columnSpan="2"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/removeRecord"
        android:id="@+id/button"
        android:layout_row="9"
        android:onClick="onClickRemoveRec"
        android:layout_column="0"
        android:layout_columnSpan="2"
        />
</GridLayout>