<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.akshaymethaniya.hisaabapp.HomeActivity"
    android:clickable="false">
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3913368499058974/5102206533">
    </com.google.android.gms.ads.AdView>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/addRecord"
        android:id="@+id/add_button"
        android:onClick="onClickAddRecord"
        android:drawableTop="@drawable/baseline_add_circle_black_24"
        android:background="@android:color/transparent"
        android:textColor="@color/bright_foreground_material_light"
        android:autoText="false"
        android:shadowRadius="5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/viewRecord"
        android:id="@+id/view_button"
        android:onClick="onClickViewRecord"
        android:drawableTop="@drawable/baseline_list_black_24"
        android:textColor="@color/bright_foreground_material_light"
        android:singleLine="false"
        android:background="@android:color/transparent"

        android:layout_below="@+id/add_button"
        android:layout_alignLeft="@+id/add_button"
        android:layout_alignStart="@+id/add_button"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/deleteAllRecord"
        android:id="@+id/button2"
        android:onClick="onClickDeleteAllRecord"
        android:drawableTop="@android:drawable/btn_dialog"
        android:background="@android:color/transparent"

        android:textColor="@color/bright_foreground_material_light"
        android:singleLine="false"
        android:layout_below="@+id/view_button"
        android:layout_alignLeft="@+id/view_button"
        android:layout_alignStart="@+id/view_button"
        android:layout_marginTop="50dp" />
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3913368499058974/5102206533">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
